fixed image display on mobile

--- a/style.css
+++ b/style.css
@@ -6,6 +6,12 @@ body {
     padding: 20px;
 }
 
+.mobiletop {
+  display: none;
+  position:fixed;
+  top:0;
+  left:0;
+}
 .menu{
    -webkit-user-select: none; /* Safari */
    -ms-user-select: none; /* IE 10 and IE 11 */
@@ -74,7 +80,6 @@ ul {
     margin-left: 175px;
     flex-direction: row;
     max-width: calc(100vw-175);
-    
     flex-wrap:no-wrap;
     justify-content: space-evenly;
     align-items: flex-start;
@@ -122,26 +127,37 @@ ul {
 @media only screen and (max-width: 480px) {
   * {
     padding:0px;
-  border: none;
+    border: none;
   }
   body {
     padding:0px;
     border: none;
   }
-  #displayimage {
-    border: none;
-    position:fixed;
-    left:0;
-    margin: 0px;
-    padding: 0;
-    display: block;
-    object-fit: contain;
-    width: 100%;
-  }
   .gallery {
     margin-left: 0px;
     
   }
+  .gallery img {
+    width: 90%;
+    transition: filter 0.25s;
+    margin: 10%
+    
+}
+  #displayimage {
+    border: none !important;
+    padding: 0 !important;
+    margin: 0px !important;
+    position:fixed;
+    left:0;
+    display: block;
+    object-fit: contain;
+    width: 100%;
+  }
+
+  .mobiletop {
+    display: block;
+  }
+
 }
 
 #displayimage {
@@ -209,4 +225,6 @@ ul {
   z-index: 25;
   
 }
+
+
 
